Project weekly hours displayed

--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -30,6 +30,7 @@
           </ul>
         </div>
         {% endif %}
+      <a class="btn btn-info" href="{% url 'weekly_report_hours' weekly_report.weekly_report_id %}" role="button">View hours</a>
       </div>
     </div>
     <div class="row">
