Adds Team lead accepting form to weekly reports

--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -40,6 +40,11 @@
         {% endif %}
         {% include "snippets/incorrect_data.html" %}
       </div>
+      <div class="col-md-4">
+        <div class="well">
+          {% include "snippets/weekly_report_accept.html" %}
+        </div>
+      </div>
 
     </div>
   </div>
