Added for generating pdf files

--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -30,6 +30,7 @@
           </ul>
         </div>
         {% endif %}
+        <a class="btn btn-info" href="{% url 'get_pdf' invoice.invoice_id 'hours' %}" role="button">Download hours</a>
       </div>
     </div>
     <div class="row">
