--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
         {% endif %}
-        <a class="btn btn-info" href="{% url 'get_pdf' invoice.invoice_id 'hours' %}" role="button">Download hours</a>
+        <a class="btn btn-info" href="{% url 'get_pdf' weekly_report.weekly_report_id 'weekly' %}" role="button">Download hours</a>
       </div>
     </div>
     <div class="row">
