--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -12,6 +12,7 @@
       <li><a href="{% url 'frontpage' %}">Home</a></li>
       <li><a href="{% url 'projects_list' %}">Projects</a></li>
       <li>{% if weekly_report.project_m %}<a href="{% url 'project' weekly_report.project_m.guid %}">Project</a>{% else %}Project{% endif %}</li>
+      <li class="active"><a href="{% url 'weekly_report' weekly_report.weekly_report_id %}">Weekly report</a></li>
     </ol>
 
     <h2>Weekly report for {{ weekly_report.full_name }} -- {{ weekly_report.date }}</h2>
