--- a/invoices/templates/snippets/weekly_report_enable_notifications.html
+++ b/invoices/templates/snippets/weekly_report_enable_notifications.html
@@ -2,7 +2,7 @@
   {% csrf_token %}
   <h3>Team lead</h3>
   <input type="checkbox" id="weeklyReportEnableNotifications" name="weeklyReportEnableNotifications" {% if project.enable_weekly_notifications %}checked="checked"{% endif %}/>
-  <label for="weeklyReportChecked">Enable weekly report slack notifications</label>
+  <label for="weeklyReportEnableNotifications">Enable weekly report slack notifications</label>
   <button type="submit" class="btn btn-primary">Save</button>
   {% if form_data %}
     <p>Last submitted by {{ form_data.user }} at {{ form_data.timestamp }}</p>
