--- a/invoices/templates/snippets/invoice.html
+++ b/invoices/templates/snippets/invoice.html
@@ -39,6 +39,7 @@
                 </td>
             </tr>
 
+        {% include "snippets/project_hours.html" %}
 
 
             {% for phase_name, phase in phases.items %}
