Added the weekly report summary snippet to the weekly report page

--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -47,6 +47,9 @@
         <div class="well">
           {% include "snippets/weekly_report_accept.html" %}
         </div>
+        <div class="well">
+          {% include "snippets/weekly_report_summary.html" %}
+        </div>
       </div>
 
     </div>
