Removed project and client names from weekly report, code review fixes

--- a/invoices/templates/invoice_page.html
+++ b/invoices/templates/invoice_page.html
@@ -31,8 +31,10 @@
           </ul>
         </div>
         {% endif %}
-        <a class="btn btn-info" href="{% url 'weekly_report' recent_weekly_report.weekly_report_id %}" role="button">Weekly report</a>
-        <a class="btn btn-info" href="{% url 'invoice_charts' invoice.invoice_id %}" role="button">Charts</a>
+        {%  if recent_weekly_report %}
+          <a class="btn btn-info" href="{% url 'weekly_report' recent_weekly_report.weekly_report_id %}" role="button">Weekly report</a>
+        {%  endif %}
+          <a class="btn btn-info" href="{% url 'invoice_charts' invoice.invoice_id %}" role="button">Charts</a>
         <a class="btn btn-info" href="{% url 'get_pdf' invoice.invoice_id 'hours' %}" role="button">Download hours</a>
         <a class="btn btn-info" href="{% url 'invoice_hours' invoice.invoice_id %}" role="button">View hours</a>
         {% if invoice.project_m %}
