--- a/invoices/templates/snippets/weekly_report.html
+++ b/invoices/templates/snippets/weekly_report.html
@@ -30,8 +30,8 @@
                             </td>
 
                             <td>
-                                {{ weekly_report.client }}<br>
-                                {{ weekly_report.project }}
+                                {{ weekly_report.project_m.client }}<br>
+                                {{ weekly_report.project_m.name }}
                             </td>
                         </tr>
                     </table>
