--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -31,7 +31,7 @@
           </ul>
         </div>
         {% endif %}
-        <a class="btn btn-info" href="{% url 'get_pdf' weekly_report.weekly_report_id 'weekly' %}" role="button">Download hours</a>
+        <a class="btn btn-info" href="{% url 'get_weekly_pdf' weekly_report.weekly_report_id %}" role="button">Download hours</a>
         <a class="btn btn-info" href="{% url 'weekly_report_hours' weekly_report.weekly_report_id %}" role="button">View hours</a>
       </div>
     </div>
