--- a/invoices/templates/snippets/weekly_report_change_of_scope.html
+++ b/invoices/templates/snippets/weekly_report_change_of_scope.html
@@ -9,6 +9,6 @@
 
   <button type="submit" class="btn btn-primary">Save</button>
   {% if change_of_scope %}
-    <p>Last submitted by {{ change_of_scope.user }} at {{ change_of_scope.timestamp }}</p>
+    <p>Last submitted by {{ change_of_scope.user }} at {{ change_of_scope.timestamp }} to Weekly report {{ change_of_scope.weekly_report.year }}-{{ change_of_scope.weekly_report.week }}</p>
   {% endif %}
 </form>
