--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -33,6 +33,7 @@
         {% endif %}
         <a class="btn btn-info" href="{% url 'get_weekly_pdf' weekly_report.weekly_report_id %}" role="button">Download hours</a>
         <a class="btn btn-info" href="{% url 'weekly_report_hours' weekly_report.weekly_report_id %}" role="button">View hours</a>
+        <a class="btn btn-info" href="{% url 'project_this_week' weekly_report.project_m_id weekly_report.year weekly_report.week %}" role="button">View project hours</a>
       </div>
     </div>
     <div class="row">
