--- a/invoices/templates/snippets/weekly_report_summary.html
+++ b/invoices/templates/snippets/weekly_report_summary.html
@@ -1,7 +1,7 @@
 <form method="post" action="{% url 'weekly_report_summary' weekly_report.weekly_report_id %}">
   {% csrf_token %}
-  <h3>Summary page for pdf</h3>
     <div class="form-group">
+        <label for="wr-summary">Summary page for pdf (separate bullet points by newline)</label>
         <textarea class="form-control" id="wr-summary" name="wr-summary" rows="4">{{latest_summary.text}}</textarea>
     </div>
   <button type="submit" class="btn btn-primary">Save</button>
