--- a/invoices/templates/snippets/weekly_report_summary.html
+++ b/invoices/templates/snippets/weekly_report_summary.html
@@ -2,19 +2,11 @@
   {% csrf_token %}
     <div class="form-group">
         <label for="wr-summary">Summary page for pdf (separate bullet points by newline)</label>
-        <textarea class="form-control" id="wr-summary" name="wr-summary" rows="4">{{latest_summary.text}}</textarea>
+        <textarea class="form-control" id="wr-summary" name="wr-summary" rows="10">{{latest_summary.text}}</textarea>
     </div>
   <button type="submit" class="btn btn-primary">Save</button>
-  {% if form_data %}
-    <p>Last submitted by {{ form_data.user }} at {{ form_data.timestamp }}</p>
-  {% else %}
-    <p></p>
+  {% if latest_summary %}
+    <p>Last submitted by {{ latest_summary.user }} at {{ latest_summary.timestamp }}</p>
+    <button type="submit" class="btn btn-primary" formaction="{% url 'delete_weekly_report_comment' weekly_report.weekly_report_id latest_summary.id %}">Delete</button>
   {% endif %}
 </form>
-
-{% if latest_summary %}
-  <form method="post" action="{% url 'delete_weekly_report_comment' weekly_report.weekly_report_id latest_summary.id %}">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">Delete</button>
-  </form>
-{% endif %}
