Adds custom page form to weekly report.
Shows all existing custom pages for a weekly report, and an option to create a new one.
Saving an existing custom page updates it.
Changes delete buttons' placement and class to btn-danger.
Adds actual comment deletion for custom pages function. Changes summary page form "delete" to use new emptying function instead.

--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -53,6 +53,9 @@
         <div class="well">
           {% include "snippets/weekly_report_change_of_scope.html" %}
         </div>
+        <div class="well">
+          {% include "snippets/weekly_report_custom_page.html" %}
+        </div>
       </div>
 
     </div>
