--- a/invoices/templates/snippets/weekly_report_summary.html
+++ b/invoices/templates/snippets/weekly_report_summary.html
@@ -4,9 +4,13 @@
         <label for="wr-summary">Summary page for pdf (separate bullet points by newline)</label>
         <textarea class="form-control" id="wr-summary" name="wr-summary" rows="10">{{latest_summary.text}}</textarea>
     </div>
+  {% if not latest_summary %}
   <button type="submit" class="btn btn-primary">Save</button>
-  {% if latest_summary %}
-    <p>Last submitted by {{ latest_summary.user }} at {{ latest_summary.timestamp }}</p>
-    <button type="submit" class="btn btn-primary" formaction="{% url 'delete_weekly_report_comment' weekly_report.weekly_report_id latest_summary.id %}">Delete</button>
+  {% else %}
+    <div>
+      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-danger" formaction="{% url 'empty_weekly_report_comment' weekly_report.weekly_report_id latest_summary.id %}">Delete</button>
+      <p>Last submitted by {{ latest_summary.user }} at {{ latest_summary.timestamp }}</p>
+    </div>
   {% endif %}
 </form>
