--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -50,6 +50,9 @@
         <div class="well">
           {% include "snippets/weekly_report_summary.html" %}
         </div>
+        <div class="well">
+          {% include "snippets/weekly_report_change_of_scope.html" %}
+        </div>
       </div>
 
     </div>
