--- a/invoices/templates/person.html
+++ b/invoices/templates/person.html
@@ -38,7 +38,7 @@ $('#person-hours a').click(function (e) {
     <a href="https://app.10000ft.com/?user_id={{ person.guid }}" role="button" class="btn btn-info">View {{ person.first_name }} in 10000ft</a>
     {% if person.amazon_account %}
     {% for account in person.amazon_account.all %}
-    <a href="{% url "amazon_invoice" account.linked_account_id year month %}" role="button" class="btn btn-info">Amazon: {{ account.name }}</a>
+    <a href="{% url 'amazon_invoice' account.linked_account_id year report_number %}" role="button" class="btn btn-info">Amazon: {{ account.name }}</a>
     {% endfor %}
     {% endif %}
     <a class="btn btn-info" href="{% url 'person_details' person.guid %}">Charts</a>
