Added support for next week page

--- a/invoices/templates/weekly_report_page.html
+++ b/invoices/templates/weekly_report_page.html
@@ -56,6 +56,9 @@
             {% include "snippets/weekly_report_summary.html" %}
           </div>
           <div class="well">
+            {% include "snippets/weekly_report_next_week.html" %}
+          </div>
+          <div class="well">
             {% include "snippets/weekly_report_change_of_scope.html" %}
           </div>
           <div class="well">
